crates/panache-parser/tests/snapshots/yaml__yaml_suite_2G84__00.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 279
expression: snapshot
---
case_id: 2G84/00
input: "--- |0\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:block scalar indent indicator must be in range 1-9@5..6]
