crates/panache-parser/tests/snapshots/yaml__yaml_suite_2G84__03.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 2G84/03
input: "--- |1+"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
